--- a/geppetto/Views/Storyboards/Profile/FullscreenImage.storyboard
+++ b/geppetto/Views/Storyboards/Profile/FullscreenImage.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Fullscreen-->
+        <!--Fullscreen Image View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="FullscreenImageViewController" title="Fullscreen" id="Y6W-OH-hqX" customClass="FullscreenImageViewController" customModule="geppetto" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FullscreenImageViewController" id="Y6W-OH-hqX" customClass="FullscreenImageViewController" customModule="geppetto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,18 +20,30 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pbd-db-Zcj">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaA-aB-Uiy">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem id="Oat-dF-0Mf"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="HaA-aB-Uiy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="IOP-jh-J4z"/>
                             <constraint firstItem="Pbd-db-Zcj" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Kvh-8h-lOE"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Pbd-db-Zcj" secondAttribute="trailing" id="WAV-kY-RXf"/>
+                            <constraint firstItem="HaA-aB-Uiy" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hGv-cZ-xab"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Pbd-db-Zcj" secondAttribute="bottom" id="rdx-05-OS7"/>
                             <constraint firstItem="Pbd-db-Zcj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="s7V-RP-H4s"/>
+                            <constraint firstItem="HaA-aB-Uiy" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="z1E-O6-LqZ"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="image" destination="Pbd-db-Zcj" id="SDD-eq-caZ"/>
+                        <outlet property="navBar" destination="HaA-aB-Uiy" id="PBk-m3-wuj"/>
+                        <outlet property="navItem" destination="Oat-dF-0Mf" id="AmA-Eq-6jZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
